--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<title>Elizabeth</title>
+<title>Elizabeth's Portfolio</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     <li>Big Data and Analytics Association</li>
     <li>Buckeye Hackers</li>
     <li>Association of Computing Machinery Women's Chapter</li>
-    <li>Jacob's Porch<a href="https://www.jacobsporch.com/"></a></li>
+    <li><a href="https://www.jacobsporch.com/">Jacob's Porch</a></li>
     <li>GRIND</li>
   </ul>
 </body>
