--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <head>
-<title>Elizabeth's Portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+  <title>Elizabeth's Portfolio</title>
+  <meta name="description" content="Elizabeth Gilbert's Portfolio">
 </head>
 
 <body>
-<h1>Elizabeth Gilbert</h1>
+<div> <h1>Elizabeth Gilbert</h1> </div>
   <p>About Me: I am a first year data analytics major at Ohio State</p>
   <p>Contact: Gilbert.607@osu.edu</p>
   <p><strong>Current Involvement:</strong></p>
@@ -12,6 +14,5 @@
     <li>Buckeye Hackers</li>
     <li>Association of Computing Machinery Women's Chapter</li>
     <li><a href="https://www.jacobsporch.com/">Jacob's Porch</a></li>
-    <li>GRIND</li>
   </ul>
 </body>
