reformatted and new pages

--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<head>
+ <head>
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"> <!-- This is the "Handlee" font from Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Poiret+One" rel="stylesheet">
@@ -9,8 +9,13 @@
 
 <body>
 <a href="index.html" class="btn">Home</a>
-<a href="resume.html" class="btn">Resume</a>
-<div> <h1>Elizabeth Gilbert</h1> </div>
-  <p><b>I am a first year data analytics student at the Ohio State University</b></p>
-  <p>Contact: Gilbert.607@osu.edu</p> <!--MAKE INTO ICON-->
+<a href="resume.html" class="btn">Resume</a> 
+<p><strong>Current Involvement</strong><br />
+    Big Data and Analytics Association <br />
+    Buckeye Hackers <br />
+    Association of Computing Machinery Women's Chapter <br />
+    <a href="https://www.jacobsporch.com/">Jacob's Porch</a>
+    <br /><br />
+    <strong>Projects</strong><br />
+    Kent Hack Enough 2016 - <a href="greetingcats.tech">GreetingCats.tech</a></p>
 </body>
