reformatted and new pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
 <body>
 <a href="index.html" class="btn">Home</a>
+<a href="about.html" class="btn">About Me</a>
 <a href="resume.html" class="btn">Resume</a>
 <div> <h1>Elizabeth Gilbert</h1> </div>
+  <!-- SUB FOR PERSONAL STATEMENT -->
   <p><b>I am a first year data analytics student at the Ohio State University</b></p>
   <p>Contact: Gilbert.607@osu.edu</p> <!--MAKE INTO ICON-->
+  <!-- ADD LINKEDIN (LEFT) AND H&S EPORTFOLIO (RIGHT) LINKS -->
 </body>
