--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,24 @@
 
 <body>
 <a href="index.html" class="btn">Home</a>
+<a href="about.html" class="btn">About Me</a>
 <a href="resume.html" class="btn">Resume</a> 
-<p><strong>Current Involvement</strong><br />
-    Big Data and Analytics Association <br />
-    Buckeye Hackers <br />
-    Association of Computing Machinery Women's Chapter <br />
+<p><strong>Academic Involvement</strong><br />
+    <!-- TODO: CREATE SUBTLE LINKS -->
+    <a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> <br />
+    <a href="https://hackers.org.ohio-state.edu/">Buckeye Hackers</a> <br />
+    <a href="https://acmw.org.ohio-state.edu/">Association of Computing Machinery Women's Chapter</a> <br />
     <a href="https://www.jacobsporch.com/">Jacob's Porch</a>
     <br /><br />
-    <strong>Projects</strong><br />
-    Kent Hack Enough 2016 - <a href="greetingcats.tech">GreetingCats.tech</a></p>
+    <strong>Projects & Experience</strong><br />
+    Kent Hack Enough 2016 - <a href="greetingcats.tech">GreetingCats.tech</a><br />
+    <br />
+    <strong>Couresework</strong><br /> <!-- ADD EXPECTED COURSEWORK? -->
+    Introduction to Computer Programming in C++ for Engineers and Scientists <br />
+    AP Computer Science test (Java) <br />
+    AP Statistics test - <i>perfect score</i> <br />
+    Computer Programming (Visual Basic) <br />
+
+    <!-- TODO: ADD REST OF RELEVENT RESUME -->
+    </p>
 </body>
