--- a/about.html
+++ b/about.html
@@ -8,30 +8,36 @@
 </head>
 
 <body>
-<a href="index.html" class="btn">Home</a>
-<a href="about.html" class="btn">About Me</a>
-<a href="resume.html" class="btn">Resume</a> 
-<p><strong>Photography</strong><br />
-   I have been taking photos professionally since about 2013, including <br />
-   senior photo shoots, modeling portfolio shots, animal and family <br />
-   photography, and dance photography. My work can be viewed <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.<br />
+<nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="active" href="about.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
+    </ul>
+  </nav>
+<!-- air on the sides of divs -->
+<div class="content"><h4>Photography</h4>
+   <p>I have been taking photos professionally since about 2013, including
+   senior photo shoots, modeling portfolio shots, animal and family
+   photography, and dance photography. My work can be viewed 
+   <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.</p>
 
-   <br /><strong>Service</strong><br />
-   My faith plays a huge role in my life. Through my current church, <br /> 
-   Jacob's Porch, I am involved in Bible study and worship planning. <br />
-   Previously, at my home church, I served as youth representative on <br />
-   the Church Board, and have been attending <a href="http://leadershiplab.net/">Leadership Lab</a> since 2013. <br />
-   Through my high school youth group, I went on yearly mission trips <br />
-   to Kyle, South Dakota, and developed relationships with the Oglala <br />
-   Lakota community there, who have been affected by systemic racism. <br />
-   Because of this experience, spreading love and acceptance in opposition <br />
-   to systemic racism is something that I am passionate about. <br />
+   <h4>Service</h4>
+   <p>My faith plays a huge role in my life. Through my current church, 
+   Jacob's Porch, I am involved in Bible study and worship planning.
+   Previously, at my home church, I served as youth representative on
+   the Church Board, and have been attending <a href="http://leadershiplab.net/">Leadership Lab</a> since 2013.
+   Through my high school youth group, I went on yearly mission trips
+   to Kyle, South Dakota, and developed relationships with the Oglala
+   Lakota community there, who have been affected by systemic racism.
+   Because of this experience, spreading love and acceptance in opposition
+   to systemic racism is something that I am passionate about. </p>
    
-   <br /><strong>Hiking</strong><br />
-   I value balance in life, and see physical activity as a core part of this.<br />
-   One of my favorite ways to be active is by spending time in nature and hiking!<br />
-   My favorite hikes have been up Harney Peak and Little Devil's Tower.
+   <h4>Hiking</h4>
+   <p>I value balance in life, and see physical activity as a core part of this.
+   One of my favorite ways to be active is by spending time in nature and hiking!
+   My favorite hikes have been up Harney Peak and Little Devil's Tower. </p>
    
    <!-- IF ADDING PHOTOS: ADD PETS & FAMILY SECTION -->
-   </p>
+   </div>
 </body>
