--- a/resume.html
+++ b/resume.html
@@ -8,24 +8,29 @@
 </head>
 
 <body>
-<a href="index.html" class="btn">Home</a>
-<a href="about.html" class="btn">About Me</a>
-<a href="resume.html" class="btn">Resume</a> 
-<p><strong>Academic Involvement</strong><br />
-    <!-- TODO: CREATE SUBTLE LINKS -->
-    <a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> <br />
+<nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a class="active" href="resume.html">Resume</a></li>
+    </ul>
+  </nav>
+  <div class="content"><h4>Academic Involvement</h4>
+    <!-- TODO: Add bottom border to section titles & width = 100% -->
+    <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> <br />
     <a href="https://hackers.org.ohio-state.edu/">Buckeye Hackers</a> <br />
     <a href="https://acmw.org.ohio-state.edu/">Association of Computing Machinery Women's Chapter</a> <br />
-    <a href="https://www.jacobsporch.com/">Jacob's Porch</a>
-    <br /><br />
-    <strong>Projects & Experience</strong><br />
-    Kent Hack Enough 2016 - <a href="greetingcats.tech">GreetingCats.tech</a><br />
-    <br />
-    <strong>Couresework</strong><br /> <!-- ADD EXPECTED COURSEWORK? -->
-    Introduction to Computer Programming in C++ for Engineers and Scientists <br />
+    <a href="https://www.jacobsporch.com/">Jacob's Porch</a></p>
+    
+    <h4>Projects & Experience</h4>
+    <p>Kent Hack Enough 2016 - <a target="_blank" href="http://greetingcats.tech">GreetingCats.tech</a></p>
+    <!-- _blank opens a new tab -->
+    
+    <h4>Couresework</h4> <!-- ADD EXPECTED COURSEWORK? -->
+    <p>Introduction to Computer Programming in C++ for Engineers and Scientists <br />
     AP Computer Science test (Java) <br />
     AP Statistics test - <i>perfect score</i> <br />
-    Computer Programming (Visual Basic) <br />
+    Computer Programming (Visual Basic) <br /></p></div>
 
     <!-- TODO: ADD REST OF RELEVENT RESUME -->
     </p>
