--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
-<a href="index.html" class="btn">Home</a>
-<a href="about.html" class="btn">About Me</a>
-<a href="resume.html" class="btn">Resume</a>
+  <nav>
+    <ul>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
+    </ul>
+  </nav>
 <div> <h1>Elizabeth Gilbert</h1> </div>
   <!-- SUB FOR PERSONAL STATEMENT -->
   <p><b>I am a first year data analytics student at the Ohio State University</b></p>
