Updated website with SP17 content

--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
     </ul>
   </nav>
 <!-- air on the sides of divs -->
-<div class="content"><h4>Photography</h4>
+<div class="content">
+   <h4>Photography</h4>
    <p>I have been taking photos professionally since about 2013, including
    senior photo shoots, modeling portfolio shots, animal and family
    photography, and dance photography. My work can be viewed 
@@ -24,19 +25,20 @@
 
    <h4>Service</h4>
    <p>My faith plays a huge role in my life. Through my current church, 
-   Jacob's Porch, I am involved in Bible study and worship planning.
-   Previously, at my home church, I served as youth representative on
-   the Church Board, and have been attending <a href="http://leadershiplab.net/">Leadership Lab</a> since 2013.
-   Through my high school youth group, I went on yearly mission trips
-   to Kyle, South Dakota, and developed relationships with the Oglala
-   Lakota community there, who have been affected by systemic racism.
-   Because of this experience, spreading love and acceptance in opposition
-   to systemic racism is something that I am passionate about. </p>
+   Jacob's Porch, I play cello in the worship band, serve on the student 
+   board, and am involved in Bible study and worship planning. Previously, 
+   at my home church, I served as youth representative on the Church Board, 
+   and have been attending <a href="http://leadershiplab.net/">Leadership Lab</a> since 2013. Through my high school 
+   youth group, I went on yearly mission trips to Kyle, South Dakota, and 
+   developed relationships with the Oglala Lakota community there, who have 
+   been affected by systemic racism. Because of this experience, spreading 
+   love and acceptance in opposition to systemic racism is something that 
+   I am passionate about. </p>
    
    <h4>Hiking</h4>
    <p>I value balance in life, and see physical activity as a core part of this.
    One of my favorite ways to be active is by spending time in nature and hiking!
-   My favorite hikes have been up Harney Peak and Little Devil's Tower. </p>
+   My favorite hikes have been up <a href="https://www.google.com/maps/place/Black+Elk+Peak/@43.8657747,-103.5331135,17z/data=!4m5!3m4!1s0x877d352554e342a7:0x36df8ab920355049!8m2!3d43.8661213!4d-103.5322648">Black Elk Peak</a> and <a href="https://www.google.com/maps/place/Little+Devils+Tower/@43.8522901,-103.5406471,17z/data=!4m5!3m4!1s0x877d34d46d32e633:0x3a2a7d40fc0c13c0!8m2!3d43.8519304!4d-103.5393596">Little Devil's Tower</a>. </p>
    
    <!-- IF ADDING PHOTOS: ADD PETS & FAMILY SECTION -->
    </div>
