--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+<html><head>
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet"> <!-- This is the "Handlee" font from Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Poiret+One" rel="stylesheet">
@@ -17,7 +17,8 @@
   </nav>
 <div> <h1>Elizabeth Gilbert</h1> </div>
   <!-- SUB FOR PERSONAL STATEMENT -->
-  <p><b>I am a first year data analytics student at the Ohio State University</b></p>
-  <p>Contact: Gilbert.607@osu.edu</p> <!--MAKE INTO ICON-->
-  <!-- ADD LINKEDIN (LEFT) AND H&S EPORTFOLIO (RIGHT) LINKS -->
-</body>
+  <p><b>I am a second year data analytics student at the Ohio State University</b></p>
+  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a href="mailto:Gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
+  <!--MAKE INTO ICONS-->
+  <!-- ADD H&S EPORTFOLIO LINK -->
+</body></html>
