--- a/resume.html
+++ b/resume.html
@@ -17,17 +17,26 @@
   </nav>
   <div class="content"><h4>Academic Involvement</h4>
     <!-- TODO: Add bottom border to section titles & width = 100% -->
-    <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> <br />
+    <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> - Event Coordinator <br />
+    <a href="https://www.jacobsporch.com/">Jacob's Porch</a> - Student Board<br />
     <a href="https://hackers.org.ohio-state.edu/">Buckeye Hackers</a> <br />
     <a href="https://acmw.org.ohio-state.edu/">Association of Computing Machinery Women's Chapter</a> <br />
-    <a href="https://www.jacobsporch.com/">Jacob's Porch</a></p>
+    <a href="https://u.osu.edu/aldpes/about/">ALDPES Freshman Honorary</a></p>
     
     <h4>Projects & Experience</h4>
-    <p>Kent Hack Enough 2016 - <a target="_blank" href="http://greetingcats.tech">GreetingCats.tech</a></p>
-    <!-- _blank opens a new tab -->
+    <p>
+    <a href="https://data-analytics.osu.edu/news/elizabeth-gilbert-research-fellowship">Summer Research Fellow 2017</a><br />
+    <a href="Intro_to_R.html">Introduction to R</a> guide <br />
+    <a href="https://data-analytics.osu.edu/datafest">DataFest 2017</a><br />
+    AEP Case Competition - March 2017<br />
+    <a href="http://hack.osu.edu/2016/">Hack OHI/O 2016</a> - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization using <a href="http://shiny.rstudio.com/">Shiny</a><br />
+    <a href="http://2016.khe.io/">Kent Hack Enough 2016</a> - GreetingCats.tech</p>
     
-    <h4>Couresework</h4> <!-- ADD EXPECTED COURSEWORK? -->
-    <p>Introduction to Computer Programming in C++ for Engineers and Scientists <br />
+    <h4>Couresework</h4>
+    <p>
+    Introduction to Probability for Data Analytics<br />
+    Software I: Software Components (Java)<br />
+    Introduction to Computer Programming in C++<br />
     AP Computer Science test (Java) <br />
     AP Statistics test - <i>perfect score</i> <br />
     Computer Programming (Visual Basic) <br /></p></div>
