--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div> <h1>Elizabeth Gilbert</h1> </div>
   <!-- SUB FOR PERSONAL STATEMENT -->
   <p><b>I am a second year data analytics student at the Ohio State University</b></p>
-  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a href="mailto:Gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
+  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
   <!--MAKE INTO ICONS-->
   <!-- ADD H&S EPORTFOLIO LINK -->
 </body></html>
