Updated Resume AU17

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="resume.html">Resume</a></li>
+      <!-- SUB LINK FOR PERSONAL STATEMENT / COVER LETTER -->
     </ul>
   </nav>
 <div> <h1>Elizabeth Gilbert</h1> </div>
-  <!-- SUB FOR PERSONAL STATEMENT -->
   <p><b>I am a second year data analytics student at the Ohio State University</b></p>
   <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
   <!--MAKE INTO ICONS-->
