--- a/resume.html
+++ b/resume.html
@@ -19,28 +19,43 @@
     <!-- TODO: Add bottom border to section titles & width = 100% -->
     <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> - Event Coordinator <br />
     <a href="https://www.jacobsporch.com/">Jacob's Porch</a> - Student Board<br />
-    <a href="https://hackers.org.ohio-state.edu/">Buckeye Hackers</a> <br />
-    <a href="https://acmw.org.ohio-state.edu/">Association of Computing Machinery Women's Chapter</a> <br />
-    <a href="https://u.osu.edu/aldpes/about/">ALDPES Freshman Honorary</a></p>
+    <a href="http://hack.osu.edu/">OHI/O</a> - HackOHI/O 2017 Mentorship Team <br />
+    <a href="https://u.osu.edu/aldpes/about/">ALDPES</a> Freshman Honorary</p>
     
     <h4>Projects & Experience</h4>
     <p>
     <a href="https://data-analytics.osu.edu/news/elizabeth-gilbert-research-fellowship">Summer Research Fellow 2017</a><br />
     <a href="Intro_to_R.html">Introduction to R</a> guide <br />
-    <a href="https://data-analytics.osu.edu/datafest">DataFest 2017</a><br />
-    AEP Case Competition - March 2017<br />
-    <a href="http://hack.osu.edu/2016/">Hack OHI/O 2016</a> - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization using <a href="http://shiny.rstudio.com/">Shiny</a><br />
-    <a href="http://2016.khe.io/">Kent Hack Enough 2016</a> - GreetingCats.tech</p>
+    <a href="https://data-analytics.osu.edu/datafest">DataFest 2017</a> - Expedia web data<br />
+    AEP BDAA Case Competition<br />
+    Hack OHI/O 2016 - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization using Shiny<br />
+    Kent Hack Enough 2016 - GreetingCats.tech front end</p>
     
     <h4>Couresework</h4>
     <p>
-    Introduction to Probability for Data Analytics<br />
+    <b>Ohio State</b> <i>2016-Present</i><br />
+    Introduction to Statistical Inference (R)<br />
+    Introduction to Probability for Data Analytics (R)<br />
+    Foundations of Computer Science: Discrete Structures<br />
+    Software II: Software Development and Design (Java)<br />
     Software I: Software Components (Java)<br />
     Introduction to Computer Programming in C++<br />
-    AP Computer Science test (Java) <br />
-    AP Statistics test - <i>perfect score</i> <br />
+
+    <!-- EXPAND OPTION FOR EXTENDED RESUME -->
+
+    <b>Lake Zurich High School</b> <i>2012-2016</i><br />
+    AP Computer Science (Java) <br />
+    AP Statistics <br />
     Computer Programming (Visual Basic) <br /></p></div>
 
-    <!-- TODO: ADD REST OF RELEVENT RESUME -->
-    </p>
+    <h4>Workshops Attended</h4>
+    <p>
+    Rasch Modeling in Winsteps<br />
+    SQL Certification - Intro to SQL for Business and Finance<br />
+    Intro to R<br />
+    Intro to SAS<br />
+    Python Certification - Intro to Data Science for Finance<br />
+    Intro to SPSS<br /></p></div>
+
+    <!-- HONORS & AWARDS SECTION -->
 </body>
