updated links to projects etc

--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
 <div class="content">
    <h4>Photography</h4>
    <p>I have been taking photos professionally since about 2013, including
-   senior photo shoots, modeling portfolio shots, animal and family
-   photography, and dance photography. My work can be viewed 
-   <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.</p>
+   engagement photos, senior photo shoots, modeling portfolio shots, 
+   animal and family photography, and dance photography. My work can be  
+   viewed <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.</p>
 
    <h4>Service</h4>
    <p>My faith plays a huge role in my life. Through my current church, 
