--- a/resume.html
+++ b/resume.html
@@ -17,26 +17,32 @@
   </nav>
   <div class="content"><h4>Academic Involvement</h4>
     <!-- TODO: Add bottom border to section titles & width = 100% -->
-    <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> - Event Coordinator <br />
+    <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> - Internal Relations Director <br />
     <a href="https://www.jacobsporch.com/">Jacob's Porch</a> - Student Board<br />
     <a href="http://hack.osu.edu/">OHI/O</a> - HackOHI/O 2017 Mentorship Team <br />
-    <a href="https://u.osu.edu/aldpes/about/">ALDPES</a> Freshman Honorary</p>
+    <a href="https://u.osu.edu/aldpes/about/">ALDPES</a> Honorary</p>
     
     <h4>Projects & Experience</h4>
     <p>
-    <a href="https://data-analytics.osu.edu/news/elizabeth-gilbert-research-fellowship">Summer Research Fellow 2017</a><br />
+    <a href="https://1drv.ms/b/s!As1OruxDnc_A7wjCTQVdtOUVafZS?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Forest Ecology Study</a><br />
+    <a href="https://1drv.ms/b/s!As1OruxDnc_A7wcXJfcIeo-60Q8H?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BF1YcQ%2BnjRoGfk%2Fdq%2BVVI1g%3D%3D">Seattle 911 Calls</a><br />
+    <a href="https://1drv.ms/b/s!As1OruxDnc_A7wnTi1x4cqqNuUtc">Summer Research Fellow 2017</a><br />
     <a href="Intro_to_R.html">Introduction to R</a> guide <br />
-    <a href="https://data-analytics.osu.edu/datafest">DataFest 2017</a> - Expedia web data<br />
+    <a href="https://1drv.ms/b/s!As1OruxDnc_A7wYSaDP2lRa3fEdM?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BwtvaDdYjSNWlU%2BpkyAX9%2BQ%3D%3D">DataFest 2017</a> - Expedia web data<br />
     AEP BDAA Case Competition<br />
-    Hack OHI/O 2016 - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization using Shiny<br />
-    Kent Hack Enough 2016 - GreetingCats.tech front end</p>
+    <a href="https://github.com/eabert/US-Pollution?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Hack OHI/O 2016</a> - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization using Shiny<br />
+    <a href="https://github.com/BuckeyeHackers/greetingcats?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Kent Hack Enough 2016</a> - GreetingCats.tech front end</p>
     
-    <h4>Couresework</h4>
+    <h4>Relevant Couresework</h4>
     <p>
     <b>Ohio State</b> <i>2016-Present</i><br />
+    Introduction to Database Systems<br />
     Introduction to Statistical Inference (R)<br />
     Introduction to Probability for Data Analytics (R)<br />
-    Foundations of Computer Science: Discrete Structures<br />
+    Linear Algebra<br />
+    Foundations II: Data Structures and Algorithms<br />
+    Foundations I: Discrete Structures <br />
+    Computer Systems<br />
     Software II: Software Development and Design (Java)<br />
     Software I: Software Components (Java)<br />
     Introduction to Computer Programming in C++<br />
