Added python experience

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <a href="Intro_to_R.html">Introduction to R</a> guide <br />
     <a href="https://1drv.ms/b/s!As1OruxDnc_A7wYSaDP2lRa3fEdM?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BwtvaDdYjSNWlU%2BpkyAX9%2BQ%3D%3D">DataFest 2017</a> - Expedia web data<br />
     AEP BDAA Case Competition<br />
-    <a href="https://github.com/eabert/US-Pollution?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Hack OHI/O 2016</a> - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization using Shiny<br />
+    <a href="https://github.com/eabert/US-Pollution?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">HackOHI/O 2016</a> - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization with Shiny<br />
     <a href="https://github.com/BuckeyeHackers/greetingcats?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Kent Hack Enough 2016</a> - GreetingCats.tech front end</p>
     
     <h4>Relevant Couresework</h4>
@@ -61,7 +61,12 @@
     Intro to R<br />
     Intro to SAS<br />
     Python Certification - Intro to Data Science for Finance<br />
-    Intro to SPSS<br /></p></div>
+    Intro to SPSS<br /></p>
+
+    <h4>Additional Programming Experience</h4>
+    <p>
+    Python - <a href="http://codingbat.com/python">CodingBat</a>, <a href="https://www.sololearn.com/Course/Python/">SoloLearn</a>, and <a href="https://www.coursera.org/learn/python">Coursera</a><br />
+    </p></div>
 
     <!-- HONORS & AWARDS SECTION -->
 </body>
