--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <!-- SUB LINK FOR PERSONAL STATEMENT / COVER LETTER -->
     </ul>
   </nav>
-
+  
+<p><img src="C:/Users/eaber/Documents/Programming/Git repos/eabert.github.io/assets/elizabethgilbert.png" alt="Elizabeth Gilbert Portrait" style="width:192px;height:192px;"></p>
 <div> <h1>Elizabeth Gilbert</h1> </div>
   <p><b>I am a second year data analytics student at the Ohio State University</b></p>
   <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
