removed header padding

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
   </nav>
   
-<p><img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAMAAQDGAAwAAQAAAAAAABGSAAAAJDY0MDQ0OGEzLTllMjItNDNiNi1iNjcxLTUyMDAzNjA5NjQ4NQ.jpg" alt="Elizabeth Gilbert Portrait" style="width:192px;height:192px;"></p>
+<p><img src="elizabethgilbert.png" alt="Elizabeth Gilbert Portrait" style="width:200px;height:200px;"></p>
 <div> <h1>Elizabeth Gilbert</h1> </div>
   <p><b>I am a second year data analytics student at the Ohio State University</b></p>
   <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
