--- a/about.html
+++ b/about.html
@@ -5,6 +5,16 @@
   <title>Elizabeth's Portfolio</title> <!-- this goes on the tab -->
   <meta name="description" content="Elizabeth Gilbert's Portfolio">
   <link href="css/style.css" rel="stylesheet"> <!--this is how it knows that the style sheet exists -->
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52740454-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+     gtag('config', 'UA-52740454-3');
+   </script>
 </head>
 
 <body>
