--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Elizabeth's Portfolio</title> <!-- this goes on the tab -->
   <meta name="description" content="Elizabeth Gilbert's Portfolio">
   <link href="css/style.css" rel="stylesheet"> <!--this is how it knows that the style sheet exists -->
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52740454-3"></script>
   <script>
@@ -26,11 +26,11 @@
       <!-- SUB LINK FOR PERSONAL STATEMENT / COVER LETTER -->
     </ul>
   </nav>
-  
+
 <p><img src="elizabethgilbert.png" alt="Elizabeth Gilbert Portrait" style="width:200px;height:200px;"></p>
 <div> <h1>Elizabeth Gilbert</h1> </div>
-  <p><b>I am a second year data analytics student at the Ohio State University</b></p>
-  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p> 
+  <p><b>I am a third year data analytics student at the Ohio State University</b></p>
+  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p>
   <!--MAKE INTO ICONS-->
   <!-- ADD H&S EPORTFOLIO LINK -->
 </body></html>
