Added thumbnail for sharing index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Poiret+One" rel="stylesheet">
   <title>Elizabeth's Portfolio</title> <!-- this goes on the tab -->
-  <meta name="description" content="Elizabeth Gilbert's Portfolio">
+  <meta name="description" content="Elizabeth Gilbert - Welcome">
   <link href="css/style.css" rel="stylesheet"> <!--this is how it knows that the style sheet exists -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -15,6 +15,11 @@
 
      gtag('config', 'UA-52740454-3');
    </script>
+
+   <meta property="og:site_name" content="Elizabeth Gilbert"/>
+   <meta property="og:title" content="Elizabeth Gilbert - Welcome"/>
+   <meta property="og:image" content="thumbnail.PNG">
+   <meta property="og:url" content="http://eabert.github.io">
 </head>
 
 <body>
