Updated year and involvement

--- a/resume.html
+++ b/resume.html
@@ -27,10 +27,9 @@
   </nav>
   <div class="content"><h4>Academic Involvement</h4>
     <!-- TODO: Add bottom border to section titles & width = 100% -->
-    <p><a href="http://www.bdaaatohiostate.org/">Big Data and Analytics Association</a> - Internal Relations Director <br />
+    <p><a href="http://bdaaosu.org/">Big Data and Analytics Association</a> - Executive Vice President<br />
     <a href="https://www.jacobsporch.com/">Jacob's Porch</a> - Student Board<br />
-    <a href="http://hack.osu.edu/">OHI/O</a> - HackOHI/O 2017 Mentorship Team <br />
-    <a href="https://u.osu.edu/aldpes/about/">ALDPES</a> Honorary</p>
+    <a href="http://womeninanalytics.com/">Women In Analytics</a> - Speaker Coordinator<br />
     
     <h4>Projects & Experience</h4>
     <p>
