--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p><img src="elizabethgilbert.png" alt="Elizabeth Gilbert Portrait" style="width:200px;height:200px;"></p>
 <div> <h1>Elizabeth Gilbert</h1> </div>
-  <p><b>I am a fourth year data analytics student at the Ohio State University</b></p>
+  <p><b>I am a recent data analytics graduate of The Ohio State University</b></p>
   <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:gilbert.607@osu.edu">Gilbert.607@osu.edu</a> - <a href="https://github.com/eabert">GitHub</a></p>
   <!--MAKE INTO ICONS-->
   <!-- ADD H&S EPORTFOLIO LINK -->
