Update: joined Spatial

--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
    viewed <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.</p>
 
    <h4>Service</h4>
-   <p>My faith plays a huge role in my life. In my gap semester after college, I am
-working with people experiencing homelessness through our local PADS
-homeless shelter, and will serve at a Lutheran church in Nordstemmen,
+   <p>My faith plays a huge role in my life. In my gap semester after college, I 
+worked with people experiencing homelessness through the local PADS
+homeless shelter, and served at St. Johannis Lutheran church in Nordstemmen,
 Lower Saxony, Germany. Through my college campus ministry, <a href="https://www.jacobsporch.com/">Jacob's Porch</a>,
 I played cello in the worship band, was involved in Bible study and worship planning,
 and redesigned the website.  </p>  <p>Previously, at my home church,
