--- a/resume.html
+++ b/resume.html
@@ -26,12 +26,15 @@
     </ul>
   </nav>
   <div class="content">
-    <h4>Involvement</h4>
+    <h4>Education</h4>
     <!-- TODO: Add bottom border to section titles & width = 100% -->
-    <p><a href="http://womeninanalytics.com/">Women In Analytics</a> - Speaker Coordinator</p>
+    <p><a href="https://data-analytics.osu.edu/">BS in Data Analytics</a>, The Ohio State University</p>
     
-    <h4>Prior Academic Involvement</h4>
-    <p><a href="http://bdaaosu.org/">Big Data and Analytics Association</a> - Executive Vice President<br />
+    <h4>Prior Involvement</h4>
+    <p><a href="http://womeninanalytics.com/">Women In Analytics</a> - Speaker Coordinator<br />
+    <a href="http://bdaaosu.org/">Big Data and Analytics Association</a> - Executive Vice President<br />
+    <a href="https://data-analytics.osu.edu/advising/academic-path-peers">Data Analytics Major</a> - Academic Path Peer<br />
+    <a href="https://tdai.osu.edu/">Translational Data Analytics Institute</a> - Student Associate</p>
     
 
     <h4>Public Projects</h4>
@@ -81,8 +84,8 @@ Introduction to Computer Programming (C++)<br />
 
     <h4>Additional Programming</h4>
     <p>
-    HTML & CSS - this website<br />
     <a href="Intro_to_R.html">Introduction to R</a> guide <br />
+    HTML & CSS - this website<br />
     </p></div>
 
     <!-- HONORS & AWARDS SECTION -->
