Update involvement and visual assets

--- a/about.html
+++ b/about.html
@@ -33,18 +33,16 @@
    viewed <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.</p>
 
    <h4>Service</h4>
-   <p>My faith plays a huge role in my life. In my gap semester after college, I 
+   <p>My faith plays a huge role in my life. Currently, I am creating <a href="https://www.firstlutherancincy.org/gathercincy">Gather Cincinnati</a>, 
+      an ecumenical young adult ministry to build community and connections between young adults
+       of faith in the greater Cincinnati area. In my gap semester after college, I 
 worked with people experiencing homelessness through the local PADS
-homeless shelter, and served at St. Johannis Lutheran church in Nordstemmen,
-Lower Saxony, Germany. Through my college campus ministry, <a href="https://www.jacobsporch.com/">Jacob's Porch</a>,
+homeless shelter, and served for four months at St. Johannis Lutheran church in Nordstemmen,
+Lower Saxony, Germany. </p>  <p>Through my college campus ministry, <a href="https://www.jacobsporch.com/">Jacob's Porch</a>,
 I played cello in the worship band, was involved in Bible study and worship planning,
-and redesigned the website.  </p>  <p>Previously, at my home church,
-I served as youth representative on the Church Board, 
-and attended <a href="http://leadershiplab.net/">Leadership Lab</a> from 2013 to 2017. Through my high school 
-youth group, I went on yearly mission trips to Kyle, South Dakota, and 
+and redesigned the website.  With my home church, I went on annual mission trips to Kyle, South Dakota, and 
 developed relationships with the Oglala Lakota community there, who have 
-been affected by systemic racism. Because of this experience, spreading 
-love and acceptance to fight to systemic oppression is something that 
+been affected by systemic racism. Because of this experience, advocating against systemic oppression is something that 
 I am passionate about. </p>
    
    <h4>Hiking</h4>
