--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <p><img src="elizabethgilbert.png" alt="Elizabeth Gilbert Portrait" style="width:200px;height:200px;"></p>
 <div> <h1>Elizabeth Gilbert</h1> </div>
-  <p><b>I am a Data Scientist at Spatial.ai</b></p>
-  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:elizabeth@spatial.ai">Email</a> - <a href="https://github.com/eabert">GitHub</a></p>
+  <p><b>I am a Product Data Analyst at Olive</b></p>
+  <p><a href="https://www.linkedin.com/in/elizabethagilbert/">LinkedIn</a> - <a target="_blank" href="mailto:elizabeth.gilbert@oliveai.com">Email</a> - <a href="https://github.com/eabert">GitHub</a></p>
   <!--MAKE INTO ICONS-->
   <!-- ADD H&S EPORTFOLIO LINK -->
 </body></html>
