--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,9 @@
     <!-- TODO: Add bottom border to section titles & width = 100% -->
     <p><a href="https://data-analytics.osu.edu/">BS in Data Analytics</a>, The Ohio State University</p>
     
+    <h4>Current Involvement</h4>
+    <p><a href="https://www.eventbrite.com/o/cintrifuse-2989630943">Data Science @ Union Hall Meetup</a> - Founder & Organizer<br />
+
     <h4>Prior Involvement</h4>
     <p><a href="http://womeninanalytics.com/">Women In Analytics</a> - Speaker Coordinator<br />
     <a href="http://bdaaosu.org/">Big Data and Analytics Association</a> - Executive Vice President<br />
@@ -44,6 +47,7 @@
 <a href="https://1drv.ms/b/s!As1OruxDnc_A9F2u1CpW6q9_7QVz">DataFest 2018</a> - Indeed job data<br />
     Fitting distributions: <a href="https://1drv.ms/b/s!As1OruxDnc_A7wjCTQVdtOUVafZS?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Forest Ecology Study</a> & <a href="https://1drv.ms/b/s!As1OruxDnc_A7wcXJfcIeo-60Q8H?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BF1YcQ%2BnjRoGfk%2Fdq%2BVVI1g%3D%3D">Seattle 911 Calls</a><br />
     <a href="https://1drv.ms/b/s!As1OruxDnc_A7wnTi1x4cqqNuUtc">Modeling Hair Cortisol Concentration</a><br />
+    <a href="Intro_to_R.html">Introduction to R</a> guide <br />
     <a href="https://1drv.ms/b/s!As1OruxDnc_A7wYSaDP2lRa3fEdM?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BwtvaDdYjSNWlU%2BpkyAX9%2BQ%3D%3D">DataFest 2017</a> - Expedia web data<br />
     <a href="https://github.com/eabert/US-Pollution?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">HackOHI/O 2016</a> - <a href="https://www.kaggle.com/sogun3/uspollution">Pollution data</a> visualization with Shiny<br />
     <a href="https://github.com/BuckeyeHackers/greetingcats?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3Bkzq39OX9SO2Z8Sx3fdiypg%3D%3D">Kent Hack Enough 2016</a> - GreetingCats.tech front end</p>
@@ -81,12 +85,6 @@ Introduction to Computer Programming (C++)<br />
     Python Certification - Intro to Data Science for Finance<br />
     Intro to SPSS<br /></p>
 <-->
-
-    <h4>Additional Programming</h4>
-    <p>
-    <a href="Intro_to_R.html">Introduction to R</a> guide <br />
-    HTML & CSS - this website<br />
-    </p></div>
 
     <!-- HONORS & AWARDS SECTION -->
 </body>
