Update work and interests

--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 <!-- air on the sides of divs -->
 <div class="content">
    <h4>Photography</h4>
-   <p>I have been taking photos professionally since about 2013, including
+   <p>I have been taking photos professionally since 2013, including
    engagement photos, senior photo shoots, and dance photography. My work can be  
    viewed <a href="https://www.flickr.com/photos/90231275@N06/">here</a>.</p>
 
    <h4>Service</h4>
-   <p>My faith plays a huge role in my life. Currently, I am creating <a href="https://www.firstlutherancincy.org/gathercincy">Gather Cincinnati</a>, 
+   <p>My faith plays a significant role in my life. Currently, I am creating <a href="https://www.firstlutherancincy.org/gathercincy">Gather Cincinnati</a>, 
       an ecumenical young adult ministry to build community and connections between young adults
        of faith in the greater Cincinnati area. In my gap semester after college, I 
 worked with people experiencing homelessness through the local PADS
